--- a/Markov_Chains.ipynb
+++ b/Markov_Chains.ipynb
@@ -6,7 +6,7 @@
       "name": "Markov Chains.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMAi7+Jns3dSHSWJRyMnXTt",
+      "authorship_tag": "ABX9TyOcEVSZgegkgrfUytWfDzS/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,6 +35,15 @@
       },
       "source": [
         "# **Task : Create New Proverbs using Markov Chains**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mwnrWwbI0vrh"
+      },
+      "source": [
+        "Along the journey to understanding Reinforcement Learning.. First stop is Markov Chains"
       ]
     },
     {
