--- a/RL_Move_thru_Rooms.ipynb
+++ b/RL_Move_thru_Rooms.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "_MV6G58IbwPk"
       ],
-      "authorship_tag": "ABX9TyOGdavc5+sv5oQR8fSPrJWA",
+      "authorship_tag": "ABX9TyNfRqb2CVdCxObZe2Pl3YEU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,14 +48,17 @@
         "id": "SZxeH0lyVknd"
       },
       "source": [
-        "# Task\n",
+        "# Task - Robot moving through connected rooms\n",
         "\n",
-        "A robot can be put in any room. It needs to try and get outside (location 5) in the shortest steps. Will solve this using **Q-learning**.\n",
+        "Here, a robot can be put in any room. It needs to try and get outside (location 5) through the shortest route via the rooms. We will solve this using **Q-learning**.\n",
         "\n",
-        "[Gridworld](https://www.mathworks.com/help/reinforcement-learning/ug/create-custom-grid-world-environments.html) is canonical example for understanding the state transitions. One can refer to it to map the grids directly to states and transitional probaliites are easy to compute.  \n",
+        "[Gridworld](https://www.mathworks.com/help/reinforcement-learning/ug/create-custom-grid-world-environments.html) is canonical example for understanding the state transitions. The grids in this world can be directly mapped to 2-D matrix of states as rows and actions(that take to next state) as columns and transitional probabilities are easy to visualise and compute.  \n",
         "\n",
         "\n",
-        "The aim for choosing this example over gridworld is to understand how to visualise states for problems different from typical gridworld. This example is real world yet with finite states. From this we have to derive the representation of states that can help in programming. This way I aim to get a good feel of how the problem can be converted to a markov chain, extract Transitional probabilities and understand state transitions. Then learn how can Q-learning be applied to it. "
+        "I chose the this 'Robot moving through connected rooms' example over gridworld to understand how to represent states for problems different from typical gridworld. This example is real world yet with finite states. The process of moving through the rooms is a [Markovian Chain](https://colab.research.google.com/drive/1Rxt24QPwaolxZfw9wynKoAwzHSWsutiW?usp=sharing\n",
+        ").  \n",
+        "\n",
+        "We will then use this understanding to infer the datastructure that should be used to represent the states in a python program. In effect this problem is solved by the canonical respresentation ie. a 2-D matrix of states as rows and actions(that take to next state) as columns. However, by going about the problem in this way I get a good feel of how the original real world problem can be seen as a markov chain, represented as a datastructure for quick computation, extract Transitional probabilities and understand state transitions. Then learn how can Q-learning be applied to it. "
       ]
     },
     {
