--- a/RL_Move_thru_Rooms.ipynb
+++ b/RL_Move_thru_Rooms.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "_MV6G58IbwPk"
       ],
-      "authorship_tag": "ABX9TyNfRqb2CVdCxObZe2Pl3YEU",
+      "authorship_tag": "ABX9TyM5VGy8h3DG5UHePZ//r5pA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
         "\n",
         "Here, a robot can be put in any room. It needs to try and get outside (location 5) through the shortest route via the rooms. We will solve this using **Q-learning**.\n",
         "\n",
-        "[Gridworld](https://www.mathworks.com/help/reinforcement-learning/ug/create-custom-grid-world-environments.html) is canonical example for understanding the state transitions. The grids in this world can be directly mapped to 2-D matrix of states as rows and actions(that take to next state) as columns and transitional probabilities are easy to visualise and compute.  \n",
+        "[Gridworld](https://www.mathworks.com/help/reinforcement-learning/ug/create-custom-grid-world-environments.html) is canonical example for understanding the state transitions. The grids in this world can be directly mapped to 2-D matrix of states as rows and actions(that take to next state) as columns and the transitional probabilities based on the [policy](https://towardsdatascience.com/training-an-agent-to-beat-grid-world-fac8a48109a8) are easy to visualise and compute.  \n",
         "\n",
         "\n",
         "I chose the this 'Robot moving through connected rooms' example over gridworld to understand how to represent states for problems different from typical gridworld. This example is real world yet with finite states. The process of moving through the rooms is a [Markovian Chain](https://colab.research.google.com/drive/1Rxt24QPwaolxZfw9wynKoAwzHSWsutiW?usp=sharing\n",
