--- a/RL_Move_thru_Rooms.ipynb
+++ b/RL_Move_thru_Rooms.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "_MV6G58IbwPk"
       ],
-      "authorship_tag": "ABX9TyM5VGy8h3DG5UHePZ//r5pA",
+      "authorship_tag": "ABX9TyP1iqWaOAOCaDI8jO89LZxG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -202,6 +202,15 @@
             "[2, 3, 4, 5]\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rGAjuwzLdqby"
+      },
+      "source": [
+        "# Reward Matrix"
       ]
     },
     {
