--- a/RL_Move_thru_Rooms.ipynb
+++ b/RL_Move_thru_Rooms.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "_MV6G58IbwPk"
       ],
-      "authorship_tag": "ABX9TyP1iqWaOAOCaDI8jO89LZxG",
+      "authorship_tag": "ABX9TyNo+BkMj+eCdUgFaMN8iST+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "I chose the this 'Robot moving through connected rooms' example over gridworld to understand how to represent states for problems different from typical gridworld. This example is real world yet with finite states. The process of moving through the rooms is a [Markovian Chain](https://colab.research.google.com/drive/1Rxt24QPwaolxZfw9wynKoAwzHSWsutiW?usp=sharing\n",
         ").  \n",
         "\n",
-        "We will then use this understanding to infer the datastructure that should be used to represent the states in a python program. In effect this problem is solved by the canonical respresentation ie. a 2-D matrix of states as rows and actions(that take to next state) as columns. However, by going about the problem in this way I get a good feel of how the original real world problem can be seen as a markov chain, represented as a datastructure for quick computation, extract Transitional probabilities and understand state transitions. Then learn how can Q-learning be applied to it. "
+        "We will then use this understanding to infer the datastructure that should be used to represent the states in a python program. In effect this problem is solved by the canonical respresentation ie. a 2-D matrix of states as rows and actions(that take to next state) as columns. However, by going about the problem in this way we get a good feel of how the original real world problem can be seen as a markov chain, represented as a datastructure for quick computation, extract Transitional probabilities and understand state transitions. Then learn how can Q-learning be applied to it. "
       ]
     },
     {
