--- a/RL_Move_thru_Rooms.ipynb
+++ b/RL_Move_thru_Rooms.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "_MV6G58IbwPk"
       ],
-      "authorship_tag": "ABX9TyNo+BkMj+eCdUgFaMN8iST+",
+      "authorship_tag": "ABX9TyNE5meYlP5duE6sGN/J/CJI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "import numpy as np\n",
         "import pylab as plt"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -55,10 +55,10 @@
         "[Gridworld](https://www.mathworks.com/help/reinforcement-learning/ug/create-custom-grid-world-environments.html) is canonical example for understanding the state transitions. The grids in this world can be directly mapped to 2-D matrix of states as rows and actions(that take to next state) as columns and the transitional probabilities based on the [policy](https://towardsdatascience.com/training-an-agent-to-beat-grid-world-fac8a48109a8) are easy to visualise and compute.  \n",
         "\n",
         "\n",
-        "I chose the this 'Robot moving through connected rooms' example over gridworld to understand how to represent states for problems different from typical gridworld. This example is real world yet with finite states. The process of moving through the rooms is a [Markovian Chain](https://colab.research.google.com/drive/1Rxt24QPwaolxZfw9wynKoAwzHSWsutiW?usp=sharing\n",
+        "I chose the this 'Robot moving through connected rooms' example to learn how to map a real world example to the gridworld datastructure. This example is real world yet with finite states. The process of moving through the rooms is a [Markovian Chain](https://colab.research.google.com/drive/1Rxt24QPwaolxZfw9wynKoAwzHSWsutiW?usp=sharing\n",
         ").  \n",
         "\n",
-        "We will then use this understanding to infer the datastructure that should be used to represent the states in a python program. In effect this problem is solved by the canonical respresentation ie. a 2-D matrix of states as rows and actions(that take to next state) as columns. However, by going about the problem in this way we get a good feel of how the original real world problem can be seen as a markov chain, represented as a datastructure for quick computation, extract Transitional probabilities and understand state transitions. Then learn how can Q-learning be applied to it. "
+        "In effect this problem is solved by the canonical respresentation ie. a 2-D matrix of states as rows and actions(that take to next state) as columns. However, by going about the problem in this way we get a good feel of how the original real world problem can be seen as a markov chain, represented as a datastructure for quick computation, extract Transitional probabilities and understand state transitions. Then learn how can Q-learning be applied to it. "
       ]
     },
     {
@@ -98,7 +98,7 @@
         "#graph connections\n",
         "points_connection_list = [(0,4), (4,3), (4,5), (2,3), (3,1), (1,5), (5,5)]"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -122,7 +122,7 @@
         "nx.draw_networkx_labels(G,pos)\n",
         "plt.show()\n"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -165,7 +165,7 @@
         "nx.draw(G, pos, connectionstyle='arc3, rad = 0.25',node_size=800)\n",
         "plt.show()"
       ],
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -193,7 +193,7 @@
         "sp = nx.shortest_path(G,source = 2, target = 5)\n",
         "print(sp)"
       ],
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,7 +222,7 @@
         "#goal : final room to reach is 5 == outside\n",
         "goal = 5"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -234,7 +234,7 @@
         "# how many points in graph? x points\n",
         "MATRIX_SIZE = 6"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -255,7 +255,7 @@
         "R *= -1\n",
         "R"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -301,7 +301,7 @@
         "\n",
         "R\n"
       ],
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,7 +356,7 @@
         "Q = np.matrix(np.zeros([MATRIX_SIZE, MATRIX_SIZE]))\n",
         "Q"
       ],
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -384,7 +384,7 @@
         "# initialising learning parameter\n",
         "gamma = 0.8"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -399,7 +399,7 @@
         "  avail_actions_indexes = np.where(current_state_row >= 0)[1]\n",
         "  return avail_actions_indexes\n"
       ],
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -413,7 +413,7 @@
         "  next_action_index = int(np.random.choice(avail_actions_indexes, 1))\n",
         "  return next_action_index\n"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -445,7 +445,7 @@
         "    score = 0\n",
         "  return score\n"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -465,7 +465,7 @@
       "source": [
         "initial_state = 1"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -481,7 +481,7 @@
         "available_act = available_actions(initial_state)\n",
         "available_act"
       ],
-      "execution_count": 95,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -508,7 +508,7 @@
         "action = sample_next_action(available_act)\n",
         "action"
       ],
-      "execution_count": 96,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -534,7 +534,7 @@
       "source": [
         "update(initial_state, 0, gamma)"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -573,7 +573,7 @@
         "    # print ('Score:', str(score))\n",
         "\n"
       ],
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -591,7 +591,7 @@
         "np.set_printoptions(formatter={'float_kind':float_formatter})\n",
         "print(Q/np.max(Q)*100)"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -616,7 +616,7 @@
       "source": [
         ""
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -657,7 +657,7 @@
         "print(\"Most efficient path:\")\n",
         "print(steps)"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -692,7 +692,7 @@
         "plt.plot(scores)\n",
         "plt.show()"
       ],
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
