--- a/RL_TicTacToe_V2.ipynb
+++ b/RL_TicTacToe_V2.ipynb
@@ -6,7 +6,7 @@
       "name": "RL_TicTacToe_V2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOI2wXU6vYXvaNJt9HdzXAi",
+      "authorship_tag": "ABX9TyPW9cj+/szBlxDuToa4XHGb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,8 @@
         "id": "xs_GTXqantDk"
       },
       "source": [
-        "### Actors in the Game"
+        "### Actors in the Game\n",
+        "\n"
       ]
     },
     {
@@ -91,6 +92,35 @@
         "_Action_ to be performed is chosen by the agent on the current state of the board. It is the next available position on the board that the agent can choose from. \n",
         "\n",
         "        \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ofyv10JTE80M"
+      },
+      "source": [
+        "### Reward"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "c-Nqb5qoE-nH"
+      },
+      "source": [
+        "\n",
+        "**+1** : Win when the winning symbol on board is same as that of the player\n",
+        "\n",
+        "**-1** : Lose when the winning symbol on board is NOT same as that of the player\n",
+        "\n",
+        "**0.5**: Draw when none of the players win\n",
+        "\n",
+        "Tic Tac Toe is a Zero sum game. If we add all rewards and punishments of all players then the result is zero. \n",
+        "\n",
+        "After the game finishes, the reward is computed for both players eg if X wins it gets +1, which implies O gets -1 \n",
+        "\n",
+        "The reward is then back-propagated through each state of the markov chain (ie state action) that led to that reward"
       ]
     },
     {
