--- a/RL_TicTacToe_V2.ipynb
+++ b/RL_TicTacToe_V2.ipynb
@@ -5,8 +5,10 @@
     "colab": {
       "name": "RL_TicTacToe_V2.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOATsmsYQqwXnG1rwH4OtU9",
+      "collapsed_sections": [
+        "AO0tWLLZnHm1"
+      ],
+      "authorship_tag": "ABX9TyPmUQEAq6UTpVnQwDCUXIST",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,13 +51,29 @@
         "\n",
         "Every simulation starts with a new Game _Board_. \n",
         "\n",
-        "Each iteration of the simulation ends when the board is full or when any of the players wins.\n",
+        "The simulation ends when the board is full or when one of the players wins.\n",
         "\n",
-        "Every Player _Agent_ is setup with their _Policy Trainer_ and follows espilon greedy policy to learn best actions over several iterations of the simulation.\n",
+        "Every Player is an _Agent_ and is setup with their own _Policy Trainer_ that follows espilon (ε) greedy policy to learn best actions over several iterations of the simulation.\n",
         "\n",
-        "**measure of success** : The Players become good at playing when the 'Draw' percentages are high.. ie. the first player to go learns to play in the middle or lears to play to Draw\n",
+        "**Measure of success :** The Players become good at playing when the 'Draw' percentages are high.. ie. the players learn to play  to Draw\n",
         " \n",
-        "It takes approximately 5000 iterations to get to optimal q-values. At that time both players learn the game well enough to win approx 50% of the time. "
+        "It takes approximately 10000 iterations to get to optimal q-values to get mostly Draws.\n",
+        "\n",
+        "**Deterministic MDP, State Value function and After State:** Tic Tac Toe is a deterministic Markov Decision Process. The same action always has same outcome.  Unlike Stochastic ones where same action could have different outcomes based on probability. \n",
+        "\n",
+        "In deterministic MDPs/games, its sufficient to have a state value function only. The reason is that there is only one thing that can happen after you take your action. There is no stochasticity in your environment... no variability in what will happen. If you know the rules of the game and model of the MDP.. step forward once with the model/rules to reach the _afterstate_.\n",
+        "\n",
+        "Therefore, do we need an action value function?. Usually when doing value based RL, we need to estimate how good the action is in the absence of knowledge of your environment. In deterministic MDPs, the value of taking action is the same as evaluating the state that you arrive into as there's no where else you could have gone taking that action. State value func is smaller.. no cross product of state and action. \n",
+        "\n",
+        "However for this exercise, since the Q-table for Action Value functions will not be too big, we'll solve using the Action values.. But since we are using Action values, we have to be careful in ensuring that illegal actions do not contribute to the calculation/backpropagation of the q-value. \n",
+        "\n",
+        "**Using Self-Play to arrive at optimal policy :** A single policy used in both players. That policy is improved by two players playing against each other using it. \n",
+        "\n",
+        "**Self-Play is a Simulation based RL approach :** Simulate experiences (markov chains) that starts from _NOW_, learning from the subspace of experiences starting from _NOW_. Repeating thousands of cycles of exp starting from _NOW_. \n",
+        "\n",
+        "Once the reward is received, all intermediate states are updated in that path eg. winner is fed upto all of the positions that led up to that win as so is the loss fed upto all positions that led up to it for the other losing player.\n",
+        "\n",
+        "For our games, we start from empty board each time, because the longest markov chain can be only 8 steps. However this can be improved by say, starting the board with the player X starting the play in the middle of the board, running the simulation and then resetting to the same start position for several more such games. This way we can arrive at the value of the 'middle start'. However, we can hypothesise that this is not useful as when the players become really good at their policies (Nash equilibrium) then from any start position, they should be able to reach a draw. TODO: I still have to test this hypothesis and perhaps can do it by making a human play against the optimal policy\n"
       ]
     },
     {
@@ -75,7 +93,7 @@
       },
       "source": [
         "\n",
-        "_Board_ is the environment. _State_ is the position of the board after a move from any player. Board also provides the possible set of actions. These are set of open positions on the board on which the player can put it's symbol. \n",
+        "_Board_ is the environment. _State_ is the position of the board after a move from any player. Board also provides the possible set of _Actions_. These are set of open positions on the board on which the player can put its symbol. \n",
         "\n",
         "_Agent_ is the player playing the game. \n",
         "\n",
@@ -84,12 +102,12 @@
         "\n",
         "Every _Agent_ has its own _Policy Trainer_ that learns the best action it should do in the _Board_ environment. \n",
         "\n",
-        "The _Policy_Trainer_ follows is the epsilon greedy random policy to choose the next action. Based on this policy it learns the _Quality Action or Q-table_ for each player. Typically the Q-values of Player X are different to those of Player O. \n",
+        "The _Policy_Trainer_ follows is the epsilon (ε) greedy policy to choose the next action. Based on this policy it learns the _Quality Action or Q-table_ for each player. Typically the Q-values of Player X are different to those of Player O. \n",
         "\n",
-        "The _Policy_Trainer_ also needs to update the Q-values after performing the action and seeing the reward, so the _Agent_ delegates the choosing of the action and the performing of the action to it. \n",
+        "The _Policy_Trainer_ updates the Q-values after performing the string of actions till end of a game and seeing the reward, so the _Agent_ delegates the choosing of the action and the performing of the action to it. \n",
         "\n",
         "\n",
-        "_Action_ to be performed is chosen by the agent on the current state of the board. It is the next available position on the board that the agent can choose from. \n",
+        "_Action_ to be performed is chosen by the agent on the current state of the board. It is the next position on the board that the agent chooses from the available list of legal positions on the board. \n",
         "\n",
         "        \n"
       ]
@@ -110,19 +128,30 @@
       },
       "source": [
         "\n",
+        "**0** : As players make individual moves, the intermediate reward is 0 for that move as we dont know whether that will lead to a Win or a Lose\n",
+        "\n",
         "**+1** : Win when the winning symbol on board is same as that of the player\n",
         "\n",
         "**-1** : Lose when the winning symbol on board is NOT same as that of the player\n",
         "\n",
         "**0.5**: Draw when none of the players win\n",
         "\n",
-        "Tic Tac Toe is a Zero sum game. If we add all rewards and punishments of all players then the result is zero. \n",
+        "Tic Tac Toe is a _Zero sum_ game. If we add all rewards and punishments of all players then the result is zero. \n",
         "\n",
         "The reward of win/lose/draw can be known only at the end of the game. \n",
         "After the game finishes, the reward is computed for both players eg if X wins it gets +1, which implies O gets -1 \n",
         "\n",
-        "Because of that, the reward has to be then back-propagated through each state of the markov chain (ie state action) that led to that reward. In this way we compute & cache the value of these individual states as a share of their contribution to getting the final reward.\n",
+        "**Back propagation :** At the end of the game, the reward is back-propagated through each state seen during the game ie the _markov chain_ (ie state action) that led to that reward. In this way we compute & cache the value of these individual states as their contribution to getting to the final reward.\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pNKp6xvcsLhX"
+      },
+      "source": [
+        "### Exploration and Exploitation\n"
       ]
     },
     {
@@ -131,21 +160,29 @@
         "id": "FKTADaJ5V2Wh"
       },
       "source": [
-        "### Exploration and Exploitation\n",
         "\n",
         "Initially we explore more as we learn about the possible moves that can be made. Over multiple iterations we start exploiting what we've learnt so we decay the exploration factor epsilon. \n",
         "\n",
-        "**Decaying epsilon-greedy**: Does the same as epsilon-greedy, however, the epsilon value starts out near 1, and decays over time according to γ to power of x where x represents the iteration the agent is in.  The below article recommends γ = 0.99 \n",
+        "**Decaying epsilon-greedy (ε)**: Does the same as epsilon-greedy, however, the epsilon value starts out near 1, and decays over time according to γ to power of x where x represents the iteration the agent is in.  The below article recommends γ = 0.99 \n",
         "\n",
         "<sup>Source: [The Effect of the Exploration\n",
         "Strategy on an Agent’s Performance](https://theses.ubn.ru.nl/bitstream/handle/123456789/5216/Nieuwdorp,%20T._BSc_Thesis_2017.pdf?sequence=1) from Thijs Nieuwdorp</sup>\n",
         "\n",
-        "However, on trying out several values, it became clear that to reach the [Nash Equilibrium](https://www.investopedia.com/terms/n/nash-equilibrium.asp) we need enough iterations to first have an exploration of the states and then it needs to settle down to apply the policy and improve it... so with 0.95 and allowing epsilon to decay till 0.001 it gives the two policy system around 100 sets of iterations for exploration before settling down and improving. That way both players improve till the last set of games are draws.\n",
+        "However, on trying out several values, it became clear that to reach the [Nash Equilibrium](https://www.investopedia.com/terms/n/nash-equilibrium.asp) we need enough iterations to first have an exploration of the states and then it needs to settle down to apply the policy and improve it... so with 0.97 and allowing ε to decay till 0.001 it gives the two policy system around 100 sets of iterations for exploration before settling down and improving. That way both players improve till the last set of games are draws.\n",
         "\n",
         "Another way to improve this logic is to start the game not just on empty board, but say with different states. eg start with X at the center of the board,  different legal states of the board.... so that the value of the states are computed from then on... This way it may create better policy for when X wins because of O's mistakes due to explorations rather than sticking to their best policy... \n",
         "\n",
-        "**When to decay**\n",
-        "Strategy is to play 200 sets of 50 games each.. Run the 50 games with the same epsilon decay value so that it is used for maximum exploration. Then decay it after every set of 50 so that over 100 sets the policy has done maximum exploration. "
+        "**When to decay :**\n",
+        "The system of self-play will be useful if for some value of the epsilon (ε) decay, several games are run so that exploration/exploitation happens for a good enough number of times to cover the state space. Therefore, the strategy employed is to play 200 sets of 50 games each.. Run the 50 games with the same epsilon decay value so that it is used for maximum exploration. Then decay ε after every set of 50 so that over 100 sets the policy has done maximum exploration. Over a 100 such sets of games, we assume that the Nash equilibrium is reached and the ε is so low that the two player's policy only chooses the best action and improves the Q-values for those over time. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MzFVBABasRbK"
+      },
+      "source": [
+        "### Quality of Action \n"
       ]
     },
     {
@@ -154,7 +191,6 @@
         "id": "wWBNNhH_Veiz"
       },
       "source": [
-        "### Quality of Action \n",
         "\n",
         "**Q (dict)** - \n",
         "\n",
@@ -169,8 +205,8 @@
         "\n",
         "beware!!! when using the default initialisation of parameter as {} then python allocates the same memory to both instances of PolicyTrainer. As a result both policies showed the same scores. Also showed win for 1 when should show only for -1.. The best way to find this happening is to initialise the game state to a board where only one player can win, but you'll see that both players get a non-zero Q-value\n",
         "\n",
-        "**Initialising Q-table**\n",
-        "The Q-table is cross product of 'states' X 'valid actions in state'.  in any board state, the positions that are already filled by X/O are illegal and will have no valid Q values that should contribute to the next maxQ. Therefore these illegal states are initialised to -2 which is lower than the reward for losing.. It could also be initialised to -ve infinity"
+        "**Initialising Q-table : Representing Legal and Illegal actions**\n",
+        "The Q-table is cross product of 'states' X 'valid actions in state'.  in any board state, the positions that are already filled by X/O are illegal and will have no valid Q values that should contribute to the next maxQ. Therefore these illegal states are initialised to -2, the first lowest value in this system as it is lower than the reward for losing.. It could also be initialised to -∞"
       ]
     },
     {
@@ -412,7 +448,7 @@
         "      else:\n",
         "          reward = -1\n",
         "    elif game_board.isBoardFull(): #if the game finishes but there is no winner, then reward is 0.5 for draw\n",
-        "      reward = 0.1\n",
+        "      reward = 0.5\n",
         "\n",
         "    return reward\n",
         "\n",
@@ -472,6 +508,8 @@
         "\n",
         "    self.move_history.reverse()\n",
         "\n",
+        "    intermediate_step_reward = 0\n",
+        "\n",
         "    next_maxQ = None #type: float\n",
         "    \n",
         "    for (state_hash, action) in self.move_history:\n",
@@ -480,7 +518,7 @@
         "      if next_maxQ == None: #first time in the loop\n",
         "        q_values[idx] = reward #as this is action that led to terminal state (win lose or draw), it gets the final reward TODO: should I add the reward\n",
         "      else:\n",
-        "        q_values[idx] = q_values[idx] * (1 - self.learning_rate) + self.learning_rate * (0 + self.discount_factor * next_maxQ) #intermediate rewards is zero\n",
+        "        q_values[idx] = q_values[idx] * (1 - self.learning_rate) + self.learning_rate * (intermediate_step_reward + self.discount_factor * next_maxQ) #intermediate rewards is zero\n",
         "\n",
         "      next_maxQ = max(q_values)\n",
         "\n",
@@ -637,7 +675,7 @@
         "id": "VKnSaWTQaJcy"
       },
       "source": [
-        "# Q-Learning : Self Play to Settle Q-Values on Nash Equillibrium"
+        "# Q-Learning : Self Play to Settle Q-Values on Nash equilibrium"
       ]
     },
     {
@@ -2790,6 +2828,42 @@
           "metadata": {},
           "execution_count": 243
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pJ3lyHKBsZ9i"
+      },
+      "source": [
+        "# Key Learnings"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0jEO_SACsckf"
+      },
+      "source": [
+        "\n",
+        "This one task taught me a lot about the nuanced aspects of Q-learning. \n",
+        "\n",
+        "1.   Using Self-Play to improve the Policy towards the Nash Equilibrium. \n",
+        "2.   Understanding the various twists when implementing Action Value function ie state & action cross product. Like, the importance of eliminating the value of illegal positions in the Q-table so that it does not contribute to the q-value calculation.\n",
+        "3.   For both the winning and losing players, remember to back-propagate the q-value to all intermediate states that contributed to receiving the rewards.\n",
+        "4.   For epsilon-greedy, running sets of episodes and decaying epsilon only for each set to allow for the right amount of exploration/exploitation.\n",
+        "5.   When decaying, consider the hand in glove relationship between epsilon and the number of sets. \n",
+        "6.   Decay epsilon to low values so that enough sets are executed such that Nash equillibrium can be reached and from then on we do miniscule explorations. \n",
+        "7.   Remember, for tic tac toe how if you do explorations in later cycles of self-play it can fluctuate the policy.. This is because once you get an optimal policy then doing an exploration is like choosing a non-optimal action and so is like making a mistake... and so this mistake causes the other player to win. \n",
+        "\n",
+        "**Metrics**\n",
+        "\n",
+        "Importantly, it gave me a view of the metrics to use to understand the back propagation and way the q-values changed for eg. \n",
+        "- by looking at the markov chains for the top level state of the board (0 0 0 0 0 0) you can see how the policy shapes up and where it settles to optimal one which leads to more draws.\n",
+        "- Run the simulations 1 to 2 games at a time to see how the policy is tuned. \n",
+        "- Start with a pre-set legal state of the board and see how simulation runs from there to get the q-table. \n",
+        "\n",
+        "All in all, a roller coaster but satisfatory project. This has given me the insights to help solve the problem that I originally was looking to solve when I started on this jojurney of learning RL. \n"
       ]
     }
   ]
